--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ stages:
       vmImage: 'macos-10.14'
     strategy:
       matrix:
-        node_12_x:
+        node_14_x:
           node_version: 14.x
     steps:
     - task: NodeTool@0
@@ -47,9 +47,12 @@ stages:
       vmImage: 'ubuntu-18.04'
     strategy:
       matrix:
-        node_12_x:
+        node_14_x:
           node_version: 14.x
     steps:
+      - script: |
+          sudo apt-get install -y libudev-dev
+        displayName: Install libudev
     - task: NodeTool@0
       inputs:
         versionSpec: $(node_version)
@@ -71,7 +74,7 @@ stages:
       vmImage: 'vs2017-win2016'
     strategy:
       matrix:
-        node_12_x:
+        node_14_x:
           node_version: 14.x
     steps:
     - task: NodeTool@0
