--- a/packages/neuron-ui/package.json
+++ b/packages/neuron-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neuron-ui",
-  "version": "0.34.0",
+  "version": "0.35.0-rc0",
   "private": true,
   "author": {
     "name": "Nervos Core Dev",
