--- a/packages/neuron-wallet/package.json
+++ b/packages/neuron-wallet/package.json
@@ -3,7 +3,7 @@
   "productName": "Neuron",
   "description": "CKB Neuron Wallet",
   "homepage": "https://www.nervos.org/",
-  "version": "0.34.0",
+  "version": "0.35.0-rc0",
   "private": true,
   "author": {
     "name": "Nervos Core Dev",
